objects/Customer_Ledger_Entry__c/Customer_Ledger_Entry__c.object-meta.xml
<CustomObject>
    <label>Customer Ledger Entry</label>
    <nameField>
        <label>Entry No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Ledger Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>