objects/Customer_Ledger_Entry__c/fields/Closed_at_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_at_Date__c</fullName>
    <label>Closed at Date</label>
    <type>Date</type>
</CustomField>