objects/Customer_Ledger_Entry__c/fields/Credit_Amount_LCY__c.field-meta.xml
<CustomField>
    <fullName>Credit_Amount_LCY__c</fullName>
    <label>Credit Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>