objects/Customer_Ledger_Entry__c/fields/Currency__c.field-meta.xml
<CustomField>
    <fullName>Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Currency</label>
    <referenceTo>Currency__c</referenceTo>
    <relationshipLabel>Customer Ledger Entries</relationshipLabel>
    <relationshipName>Customer_Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>