objects/Customer_Ledger_Entry__c/fields/Date_of_Last_Payment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Payment__c</fullName>
    <label>Date of Last Payment</label>
    <type>Date</type>
</CustomField>