objects/Customer_Ledger_Entry__c/fields/Debit_Amount_LCY__c.field-meta.xml
<CustomField>
    <fullName>Debit_Amount_LCY__c</fullName>
    <label>Debit Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>