objects/Customer_Ledger_Entry__c/fields/Due_Days__c.field-meta.xml
<CustomField>
    <fullName>Due_Days__c</fullName>
    <label>Due Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>