objects/Customer_Ledger_Entry__c/fields/External_Document_No__c.field-meta.xml
<CustomField>
    <fullName>External_Document_No__c</fullName>
    <label>External Document No.</label>
    <length>50</length>
    <type>Text</type>
</CustomField>