objects/Customer_Ledger_Entry__c/fields/Global_Dimension_2_Code__c.field-meta.xml
<CustomField>
    <fullName>Global_Dimension_2_Code__c</fullName>
    <label>Global Dimension 2 Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>