objects/Customer_Ledger_Entry__c/fields/Invoice_Discount_LCY__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Discount_LCY__c</fullName>
    <label>Invoice Discount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>