objects/Customer_Ledger_Entry__c/fields/Original_Amount_LCY__c.field-meta.xml
<CustomField>
    <fullName>Original_Amount_LCY__c</fullName>
    <label>Original Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>