objects/Customer_Ledger_Entry__c/fields/Profit_LCY__c.field-meta.xml
<CustomField>
    <fullName>Profit_LCY__c</fullName>
    <label>Profit ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>