objects/Customer_Ledger_Entry__c/fields/Remaining_Amount_LCY__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Amount_LCY__c</fullName>
    <label>Remaining Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>