objects/Customer_Ledger_Entry__c/fields/Sales_LCY__c.field-meta.xml
<CustomField>
    <fullName>Sales_LCY__c</fullName>
    <label>Sales ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>