objects/Customer_Ledger_Entry__c/fields/Salesperson__c.field-meta.xml
<CustomField>
    <fullName>Salesperson__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesperson</label>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Customer Ledger Entries</relationshipLabel>
    <relationshipName>Customer_Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>