objects/Customer_Ledger_Entry__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>Customer Ledger Entries</relationshipLabel>
    <relationshipName>Customer_Ledger_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>