objects/Customer_Ledger_Entry__c/fields/TempDateUpdated__c.field-meta.xml
<CustomField>
    <fullName>TempDateUpdated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TempDateUpdated</label>
    <type>Checkbox</type>
</CustomField>