objects/Customer_Ledger_Entry__c/listViews/ACV_Enviro.listView-meta.xml
<ListView>
    <fullName>ACV_Enviro</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_No__c</columns>
    <columns>Document_Date__c</columns>
    <columns>External_Document_No__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Remaining_Amount__c</columns>
    <columns>Sales_LCY__c</columns>
    <columns>Open__c</columns>
    <columns>Service_Center__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Processed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary_Company__c</field>
        <operation>equals</operation>
        <value>1-ACV ENVIRO</value>
    </filters>
    <filters>
        <field>Sales_Order__c</field>
        <operation>equals</operation>
        <value>CT106541</value>
    </filters>
    <label>ACV Enviro</label>
</ListView>