objects/Customer_Ledger_Entry__c/listViews/Envirotech_Consultants_LLC.listView-meta.xml
<ListView>
    <fullName>Envirotech_Consultants_LLC</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_No__c</columns>
    <columns>Document_Date__c</columns>
    <columns>External_Document_No__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Amount__c</columns>
    <columns>Remaining_Amount__c</columns>
    <columns>Open__c</columns>
    <columns>Service_Center__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidiary_Company__c</field>
        <operation>equals</operation>
        <value>4-ENVIROTECH CONSULTANTS LLC</value>
    </filters>
    <label>Envirotech Consultants LLC</label>
</ListView>